--- a/app/src/main/res/layout/activity_andre.xml
+++ b/app/src/main/res/layout/activity_andre.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        tools:context=".PalavaActivity">
+        tools:context=".AgniActivity">
 
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cormorant"
-            android:text="PÁLAVA (Pa)"
+            android:text="André (An)"
             android:textColor="#B6B6B6"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -33,16 +33,16 @@
             app:layout_constraintVertical_bias="0.022" />
 
         <ImageView
-            android:id="@+id/palava_hrozen"
+            android:id="@+id/andre_hrozen"
             android:layout_width="150dp"
             android:layout_height="120dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:paddingTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/palava" />
+            app:srcCompat="@drawable/andre" />
 
         <ImageView
             android:id="@+id/icon_zrak"
@@ -51,8 +51,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/palava_hrozen"
-            app:srcCompat="@drawable/lista_barva_bile"
+            app:layout_constraintTop_toBottomOf="@+id/andre_hrozen"
+            app:srcCompat="@drawable/lista_barva_cervene"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -62,7 +62,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_cich"
-            app:srcCompat="@drawable/lista_chut_bile"
+            app:srcCompat="@drawable/lista_chut_cervene"
+            tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/icon_cich"
+            android:layout_width="match_parent"
+            android:layout_height="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
+            app:srcCompat="@drawable/lista_vune_cervene"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -72,7 +82,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_chut"
-            app:srcCompat="@drawable/lista_stolovani_bile"
+            app:srcCompat="@drawable/lista_stolovani_cervene"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -81,20 +91,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/stolovani_palava"
+            android:text="@string/stolovani_andre"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />
-
-        <ImageView
-            android:id="@+id/icon_cich"
-            android:layout_width="match_parent"
-            android:layout_height="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
-            app:srcCompat="@drawable/lista_vune_bile"
-            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/article_heading"
@@ -103,9 +103,9 @@
             android:layout_marginTop="10dp"
             android:background="@color/black"
             android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
             android:padding="5dp"
             android:text="DOPLŇUJÍCÍ INFORMACE"
+            android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textColor="#B6B6B6"
             android:textSize="14sp"
@@ -114,20 +114,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_stolovani" />
 
-        <TextView
-            android:id="@+id/obecny_popis_palava"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="sans-serif-condensed-light"
-            android:padding="5sp"
-            android:text="@string/popis_palava"
-            android:textColor="#B6B6B6"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
         <TextView
             android:id="@+id/popis_cich"
@@ -135,7 +121,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/vune_palava"
+            android:text="@string/vune_andre"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +134,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/barva_palava"
+            android:text="@string/barva_andre"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
@@ -160,10 +146,25 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/chut_palava"
+            android:text="@string/chut_andre"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_chut" />
+
+        <TextView
+            android:id="@+id/obecny_popis_palava"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:padding="5sp"
+            android:text="@string/popis_andre"
+            android:textColor="#B6B6B6"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
