--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,28 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="140dp"
-    android:background="@color/colorAccent"
-    android:gravity="bottom"
+    android:background="@color/bckgColor"
     android:orientation="vertical"
     android:padding="16dp"
     >
 
     <ImageView
-        android:layout_width="78dp"
-        android:layout_height="51dp"
-        android:paddingTop="16dp"
+        android:layout_width="109dp"
+        android:layout_height="60dp"
         android:src="@drawable/diwinelogo2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
+        android:textColor="@color/white"
         android:text="Rozšířené menu"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="diwine@gmail.com" />
 
 </LinearLayout>
