--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="titleColor">#B6B6B6</color>
     <color name="bckgColor">#1a1a1a</color>
     <color name="bckgColorDetail">#1a1a1a</color>
+    <color name="drawer_bckg">#091311</color>
 
 
 
