--- a/app/src/main/res/layout/activity_alibernet.xml
+++ b/app/src/main/res/layout/activity_alibernet.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        tools:context=".AgniActivity">
+        tools:context=".AlibernetActivity">
 
 
         <TextView
