--- a/app/src/main/res/layout/activity_blauburger.xml
+++ b/app/src/main/res/layout/activity_blauburger.xml
@@ -14,15 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        tools:context=".AndreActivity">
-
+        tools:context=".BlauburgerActivity">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cormorant"
-            android:text="André (An)"
+            android:text="BLAUBURGER (Au)"
             android:textColor="#B6B6B6"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -33,16 +32,16 @@
             app:layout_constraintVertical_bias="0.022" />
 
         <ImageView
-            android:id="@+id/andre_hrozen"
+            android:id="@+id/blauburger_hrozen"
             android:layout_width="150dp"
             android:layout_height="120dp"
-            android:paddingTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/andre" />
+            app:srcCompat="@drawable/blauburger" />
 
         <ImageView
             android:id="@+id/icon_zrak"
@@ -51,7 +50,7 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/andre_hrozen"
+            app:layout_constraintTop_toBottomOf="@+id/blauburger_hrozen"
             app:srcCompat="@drawable/lista_barva_cervene"
             tools:ignore="MissingConstraints" />
 
@@ -63,16 +62,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_cich"
             app:srcCompat="@drawable/lista_chut_cervene"
-            tools:ignore="MissingConstraints" />
-
-        <ImageView
-            android:id="@+id/icon_cich"
-            android:layout_width="match_parent"
-            android:layout_height="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
-            app:srcCompat="@drawable/lista_vune_cervene"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -91,10 +80,20 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/stolovani_andre"
+            android:text="@string/stolovani_blauburger"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />
+
+        <ImageView
+            android:id="@+id/icon_cich"
+            android:layout_width="match_parent"
+            android:layout_height="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
+            app:srcCompat="@drawable/lista_vune_cervene"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/article_heading"
@@ -103,9 +102,9 @@
             android:layout_marginTop="10dp"
             android:background="@color/black"
             android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="center"
             android:padding="5dp"
             android:text="DOPLŇUJÍCÍ INFORMACE"
-            android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textColor="#B6B6B6"
             android:textSize="14sp"
@@ -114,6 +113,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_stolovani" />
 
+        <TextView
+            android:id="@+id/obecny_popis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:padding="5sp"
+            android:text="@string/popis_blauburger"
+            android:textColor="#B6B6B6"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
         <TextView
             android:id="@+id/popis_cich"
@@ -121,7 +134,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/vune_andre"
+            android:text="@string/vune_blauburger"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +147,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/barva_andre"
+            android:text="@string/barva_blauburger"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
@@ -146,25 +159,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/chut_andre"
+            android:text="@string/chut_blauburger"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_chut" />
-
-        <TextView
-            android:id="@+id/obecny_popis_palava"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="sans-serif-condensed-light"
-            android:padding="5sp"
-            android:text="@string/popis_andre"
-            android:textColor="#B6B6B6"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
