--- a/app/src/main/res/layout/activity_cabernetdorsa.xml
+++ b/app/src/main/res/layout/activity_cabernetdorsa.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        tools:context=".AndreActivity">
+        tools:context=".CabernetdorsaActivity">
 
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cormorant"
-            android:text="André (An)"
+            android:text="CABERNET DORSA (CD)"
             android:textColor="#B6B6B6"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -33,7 +33,7 @@
             app:layout_constraintVertical_bias="0.022" />
 
         <ImageView
-            android:id="@+id/andre_hrozen"
+            android:id="@+id/hrozen"
             android:layout_width="150dp"
             android:layout_height="120dp"
             android:paddingTop="10dp"
@@ -42,7 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/andre" />
+            app:srcCompat="@drawable/cabernetdorsa" />
 
         <ImageView
             android:id="@+id/icon_zrak"
@@ -51,7 +51,7 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/andre_hrozen"
+            app:layout_constraintTop_toBottomOf="@+id/hrozen"
             app:srcCompat="@drawable/lista_barva_cervene"
             tools:ignore="MissingConstraints" />
 
@@ -91,7 +91,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/stolovani_andre"
+            android:text="@string/stolovani_cabernetcortis"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/vune_andre"
+            android:text="@string/vune_cabernetdorsa"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/barva_andre"
+            android:text="@string/barva_cabernetdorsa"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
@@ -146,20 +146,20 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/chut_andre"
+            android:text="@string/chut_cabernetdorsa"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_chut" />
 
         <TextView
-            android:id="@+id/obecny_popis_palava"
+            android:id="@+id/obecny_popis_cabernetdorsa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="sans-serif-condensed-light"
             android:padding="5sp"
-            android:text="@string/popis_andre"
+            android:text="@string/popis_cabernetdorsa"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
