--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,11 +10,11 @@
         <item
             android:id="@+id/nav_book"
             android:icon="@drawable/ic_book"
-            android:title="Vinařský slovník" />
+            android:title="@string/navbar_title_slovnik" />
         <item
             android:id="@+id/nav_circle"
             android:icon="@drawable/ic_circle"
-            android:title="Aromatické kruhy" />
+            android:title="@string/navbar_title_kruhy" />
 
     </group>
 
