--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="semiTransparentColor">#20ffffff</color>
     <color name="titleColor">#B6B6B6</color>
     <color name="bckgColor">#1a1a1a</color>
-    <color name="bckgColorDetail">#1a1a1a</color>
+    <color name="bckgColorDetail">#681A1A1A</color>
     <color name="drawer_bckg">#091311</color>
 
 
