--- a/app/src/main/res/layout/activity_aromaticke.xml
+++ b/app/src/main/res/layout/activity_aromaticke.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/drawer_bckg"
     tools:context=".AromatickeActivity">
 
-    <TextView
+
+
+    <ImageView
+        android:id="@+id/aromatickyBile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aromaticke Screen"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/aromatickybile"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
