--- a/app/src/main/res/layout/activity_vinarsky.xml
+++ b/app/src/main/res/layout/activity_vinarsky.xml
@@ -49,12 +49,12 @@
             android:fontFamily="sans-serif-condensed-light"
             android:lineSpacingExtra="5sp"
             android:padding="5sp"
-            android:text="@string/slovnikobsah"
             android:textColor="#B6B6B6"
             app:layout_constraintTop_toBottomOf="@+id/vinazcech_logo"
             android:paddingTop="20dp"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="0dp" />
+                    tools:layout_editor_absoluteX="0dp"
+                />
 
 
 
