--- a/app/src/main/res/layout/activity_mery.xml
+++ b/app/src/main/res/layout/activity_mery.xml
@@ -42,7 +42,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/diwinelogo" />
+            app:srcCompat="@drawable/bile"
+            />
 
         <ImageView
             android:id="@+id/icon_zrak"
