--- a/app/src/main/res/layout/activity_svojsen.xml
+++ b/app/src/main/res/layout/activity_svojsen.xml
@@ -42,6 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/bile"
             />
 
         <ImageView
