--- a/app/src/main/res/layout/activity_vesna.xml
+++ b/app/src/main/res/layout/activity_vesna.xml
@@ -15,17 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-
-
-
-        tools:context=".SolarisActivity">
+        tools:context=".VeritasActivity">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cormorant"
-            android:text="SOLARIS"
+            android:text="VESNA (Ves)"
             android:textColor="#B6B6B6"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -45,8 +42,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/bile"
-             />
+            app:srcCompat="@drawable/bile" />
 
         <ImageView
             android:id="@+id/icon_zrak"
@@ -85,7 +81,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/stolovani_tristar"
+            android:text="@string/stolovani_vesna"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />
@@ -119,14 +115,14 @@
             app:layout_constraintTop_toBottomOf="@+id/popis_stolovani" />
 
         <TextView
-            android:id="@+id/obecny_popis_solaris"
+            android:id="@+id/obecny_popis_vesta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="sans-serif-condensed-light"
             android:padding="5sp"
-            android:text="@string/popis_solaris"
+            android:text="@string/popis_vesna"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +135,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/vune_solaris"
+            android:text="@string/vune_vesna"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +148,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/barva_tristar"
+            android:text="@string/barva_vesna"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
@@ -164,7 +160,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/chut_solaris"
+            android:text="@string/chut_vesna"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_chut" />
