--- a/app/src/main/res/layout/activity_vrboska.xml
+++ b/app/src/main/res/layout/activity_vrboska.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:layout_editor_absoluteX="1dp"
+    android:background="@drawable/background"
     tools:layout_editor_absoluteY="1dp">
 
 
@@ -15,17 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
+        tools:context=".VrboskaActivity">
 
-
-
-        tools:context=".SolarisActivity">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cormorant"
-            android:text="SOLARIS"
+            android:text="VRBOSKA (Vr)"
             android:textColor="#B6B6B6"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -39,14 +37,13 @@
             android:id="@+id/hrozen"
             android:layout_width="150dp"
             android:layout_height="120dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:paddingTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/bile"
-             />
+            app:srcCompat="@drawable/vrboska" />
 
         <ImageView
             android:id="@+id/icon_zrak"
@@ -56,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hrozen"
-            app:srcCompat="@drawable/lista_barva_bile"
+            app:srcCompat="@drawable/lista_barva_cervene"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -66,7 +63,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_cich"
-            app:srcCompat="@drawable/lista_chut_bile"
+            app:srcCompat="@drawable/lista_chut_cervene"
+            tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/icon_cich"
+            android:layout_width="match_parent"
+            android:layout_height="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
+            app:srcCompat="@drawable/lista_vune_cervene"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -76,7 +83,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_chut"
-            app:srcCompat="@drawable/lista_stolovani_bile"
+            app:srcCompat="@drawable/lista_stolovani_cervene"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -85,20 +92,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/stolovani_tristar"
+            android:text="@string/stolovani_vrboska"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_stolovani" />
-
-        <ImageView
-            android:id="@+id/icon_cich"
-            android:layout_width="match_parent"
-            android:layout_height="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/popis_zrak"
-            app:srcCompat="@drawable/lista_vune_bile"
-            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/article_heading"
@@ -107,9 +104,9 @@
             android:layout_marginTop="10dp"
             android:background="@color/black"
             android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
             android:padding="5dp"
             android:text="DOPLŇUJÍCÍ INFORMACE"
+            android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:textColor="#B6B6B6"
             android:textSize="14sp"
@@ -118,20 +115,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/popis_stolovani" />
 
-        <TextView
-            android:id="@+id/obecny_popis_solaris"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="sans-serif-condensed-light"
-            android:padding="5sp"
-            android:text="@string/popis_solaris"
-            android:textColor="#B6B6B6"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
         <TextView
             android:id="@+id/popis_cich"
@@ -139,7 +122,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/vune_solaris"
+            android:text="@string/vune_vrboska"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +135,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/barva_tristar"
+            android:text="@string/barva_vrboska"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_zrak"
@@ -164,10 +147,25 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed-light"
             android:paddingLeft="10dp"
-            android:text="@string/chut_solaris"
+            android:text="@string/chut_vrboska"
             android:textColor="#B6B6B6"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/icon_chut" />
+
+        <TextView
+            android:id="@+id/obecny_popis_vrboska"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:padding="5sp"
+            android:text="@string/popis_vrboska"
+            android:textColor="#B6B6B6"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/article_heading" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
